# cmps530-hw0

./: LICENSE.md  README.md  cmps530_utils.py  hw0.py  hw0_test.py  pyproject.toml
